# raspi4

./: .gitignore  README.md  curr_motor_config.json  servo_test.py  sim.usd
AprilTag/: aprilTagTest.py  calibrateCamera.py  takePicAndAprilTag.py  takePicture.py
python/: .gitignore  README.md  dockerbuild.sh
python/Arduino/: LICENSE
python/Firmware/: LICENSE  Makefile  ODriveFirmware.launch  Tupfile.lua  Tuprules.lua  adctest.py  freertos_vars.h  interface_generator_stub.py  odrive-interface.yaml  sampler.py  syscalls.c  (+1 more)
ros2_ws/: fastdds.xml
ros2_ws/src/catbot/: Control_Plan.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/catbot/catbot/: Control_Plan.txt  cansetup.txt  collect_data.py  jump.py  jump_node.py  jump_phase_one.py  leg_node.py  listener_node.py  motor_servo_test.py  motor_test.py  odrive_stopper.py  root_servo_control.py  servo_control_node.py  servo_test_node.py  stop.py  two_motor_and_servo.py  updated_jump.py
ros2_ws/src/catbot/catbot/controllers/: fk_controller.py  odrive_controller.py  phase_controller.py
ros2_ws/src/catbot/launch/: initialize.launch.yaml  jump_test.launch.yaml  motor_servo.launch.yaml  motor_test.launch.yaml  servo_test.launch.py  servo_test.launch.yaml  stop.launch.yaml  test.launch.yaml  two_motor_and_servo.launch.yaml  two_motor_and_servo.yaml
ros2_ws/src/servobot/: package.xml  setup.py  test.py
ros2_ws/src/servobot/description/: base.part  botleg.part  botleg.stl  catbot.xacro  config.json  hipjoint.part  hipjoint.stl  mirrorhipjoint.stl  servo.part  servo.stl  servobot.urdf  topleg.stl  toplegcover.part
ros2_ws/src/servobot/description/servobot/: servobot.usd
ros2_ws/src/servobot/launch/: main.launch.yaml  offsets.launch.yaml  sim.launch.yaml  test.launch.yaml  walk.launch.yaml
ros2_ws/src/servobot/servobot/: circle_test_node.py  control_node.py  gait_controller.py  gait_node.py  ik_controller.py  ik_node.py  leg_node.py  multi_servo_node.py  servo_node.py  sim_node.py  simple_control_node.py  test_node.py  walk_test_node.py
ros2_ws/src/testgui/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/testgui/launch/: main.launch.yaml
ros2_ws/src/testgui/testgui/: example_node.py  gui_node.py
ros2_ws/src/testgui/testgui/extensions/: jump_test.py
ros2_ws/src/testgui/testgui/models/: node_model.py  param_model.py
ros2_ws/src/testgui/testgui/views/: node_view.py
(+399 files in other folders)
