<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>testgui</name>
  <version>1.0.0</version>
  <description>A package that provides a GUI application for controlling jump tests.</description>
  <maintainer email="riceroboticsclub@gmail.com">Rice Robotics Club</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>catbot_msg</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
